<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <LinearLayout
        android:id="@+id/menu"
        android:layout_height="fill_parent"
        android:layout_width="150dip"
        android:background="#f2f2f2"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#000"
            android:layout_marginTop="50dip" />
        <Button
	        android:id="@+id/p1"
	        android:text="@string/one"
	    	android:layout_width="fill_parent"
	    	android:layout_height="50dip"
	    	android:textSize="18dip"
	    	android:background="@drawable/states" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#000" />
        <Button
	        android:id="@+id/p2"
	        android:text="@string/two"
	    	android:layout_width="fill_parent"
	    	android:layout_height="50dip"
	    	android:textSize="18dip"
	    	android:background="@drawable/states" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#000" />
        <Button
	        android:id="@+id/p3"
	        android:text="@string/three"
	    	android:layout_width="fill_parent"
	    	android:layout_height="50dip"
	    	android:textSize="18dip"
	    	android:background="@drawable/states" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#000" />
        <Button
	        android:id="@+id/p4"
	        android:text="@string/four"
	    	android:layout_width="fill_parent"
	    	android:layout_height="50dip"
	    	android:textSize="18dip"
	    	android:background="@drawable/states" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#000" />
    </LinearLayout>
	<LinearLayout
	    android:id="@+id/content"
        android:layout_height="fill_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" >
        <LinearLayout
			android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:background="#f2f2f2" >
            <ImageButton
		        android:id="@+id/menu_button"
		    	android:layout_width="50dip"
		    	android:layout_height="50dip"
		    	android:background="@drawable/states"
		    	android:src="@drawable/options"
		    	android:contentDescription="@string/app_name" />
            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="24dip"
                android:paddingTop="14dip"
                android:gravity="center" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#000" />
        <ScrollView
             android:layout_width="match_parent"
	         android:layout_height="fill_parent"
	         android:background="#fff" >
            <TextView
                android:id="@+id/paragraph"
                android:textSize="20dip"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="10dip" />
        </ScrollView>
	</LinearLayout>
</LinearLayout>